<resources>

    <string name="app_name">EmotionsTracker</string>

    <string name="activity_add">Add new Emotion</string>
    <string name="activity_details">Learn more</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="current_user_prefix">Current user:</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_permission_title">Permissions</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="media_permission">Access media</string>
    <string name="media_permission_key">settings_media_permission</string>
    <string name="location_permission">Access fine location</string>
    <string name="location_permission_key">settings_location_permission</string>

    <string name="pref_user_title">User</string>
    <string name="username_key">settings_username</string>
    <string name="default_username">Default</string>
    <string name="username_preference">What is your name?</string>

</resources>
